@@ -6,14 +6,18 @@ public class Person {
 
 	@Id
 	private String id;
-	
+
 	private String name;
-	
+
 	private int age;
 
 	public Person(String name, int age) {
 		this.name = name;
 		this.age = age;
+	}
+
+	public Person() {
+
 	}
 
 	public String getId() {
